[project]
name = "comfyui-face-aligned-center"
description = "Batch-aware character centering for ComfyUI. Given a character sheet (multiple angles), scales every image so the face ends up at the same size and canvas position — including back-view angles, via a silhouette fallback tied to the batch's face scale. Includes a Fine-Tune node for per-image zoom/nudge with a live canvas preview, and an Anime Face Detect node for crop+mask using lbpcascade_animeface."
version = "1.2.1"
license = { file = "LICENSE" }
dependencies = ["numpy", "torch", "Pillow", "opencv-python", "ultralytics"]

[project.urls]
Repository = "https://github.com/serhiiyashyn-sf/comfyui-face-aligned-center"

[tool.comfy]
PublisherId = "serhiiyashyn-sf"
DisplayName = "Face-Aligned Center"
Icon = ""
